--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Check out epoch repository
         uses: actions/checkout@v3
         with:
+          repository: lf-lang/epoch
           submodules: recursive
           fetch-depth: 0
       - uses: actions/setup-java@v3
