--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,20 @@ on:
         required: false
         type: boolean
         default: false
+      upload-artifacts:
+        type: boolean
+        required: false
+        default: true
       lingua-franca-ref:
         type: string
         required: false
 
   workflow_dispatch:
+    inputs:
+      upload-artifacts:
+        type: boolean
+        required: false
+        default: true
 
 jobs:
   build-epoch:
@@ -68,7 +77,7 @@ jobs:
           path: org.lflang.rca/target/products/epoch_ide_*-linux.gtk.x86_64.tar.gz
           if-no-files-found: error
           retention-days: 5
-        if: ${{ inputs.nightly == false }} 
+        if: ${{ inputs.nightly == false && (inputs.upload-artifacts == true || github.event.inputs.upload-artifacts == true) }}
       - name: Upload Build Artifact (Mac)
         uses: actions/upload-artifact@v2
         with:
