--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,14 @@ on:
 
 concurrency:
   group: ci-${{ github.ref }}-${{ github.event_path }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
   # Run the Maven build.
   build:
     uses: ./.github/workflows/build.yml
+    with:
+      upload-artifacts: false
 
   # Run tests for Eclipse.
   eclipse-tests:
