--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
           path: org.lflang.rca/target/products/epoch_ide_*-macosx.cocoa.*.tar.gz
           if-no-files-found: error
           retention-days: 5
-        if: ${{ inputs.nightly == false }}  
+        if: ${{ inputs.nightly == false && (inputs.upload-artifacts == true || github.event.inputs.upload-artifacts == true) }}  
       - name: Upload Build Artifact (Windows)
         uses: actions/upload-artifact@v2
         with:
@@ -93,4 +93,4 @@ jobs:
           path: org.lflang.rca/target/products/epoch_ide_*-win32.win32.x86_64.zip
           if-no-files-found: error
           retention-days: 5
-        if: ${{ inputs.nightly == false }}
+        if: ${{ inputs.nightly == false && (inputs.upload-artifacts == true || github.event.inputs.upload-artifacts == true) }}
