--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         shell: bash
         if: ${{ inputs.lingua-franca-ref != '' }}
       - name: Configure Git for francabot
-        uses: lf-lang/release-tools/.github/actions/configure-git@main
+        uses: lf-lang/lingua-franca/.github/actions/setup-francabot@francabot
         with:
           gpg-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
