--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,12 @@ jobs:
         if: ${{ inputs.lingua-franca-ref != '' && inputs.nightly == true }}
       - name: Commit to the `nightly` branch
         run: |
+          export GPG_TTY=$(tty)
           git status --porcelain | grep . && git commit -a -m 'Update lingua-franca submodule'
           git push -f origin/nightly
           git switch nightly
           git pull
+        shell: bash
         if: ${{ inputs.lingua-franca-ref != '' && inputs.nightly == true }}
       - name: Build and package epoch
         run: mvn -U package
