--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,11 @@ jobs:
         if: ${{ inputs.lingua-franca-ref != '' && inputs.nightly == true }}
       - name: Commit to the `nightly` branch
         run: |
+          git stash
+          git switch nightly || git checkout -b nightly
+          git stash apply
           git status --porcelain | grep . && git commit -a -m 'Update lingua-franca submodule'
-          git push -f origin nightly
-          git switch nightly
-          git pull
+          git push
         shell: bash
         if: ${{ inputs.lingua-franca-ref != '' && inputs.nightly == true }}
       - name: Build and package epoch
