--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,9 +60,9 @@ jobs:
           gpg-key: ${{ secrets.gpg-key }}
           gpg-passphrase: ${{ secrets.gpg-passphrase }}
         if: ${{ inputs.lingua-franca-ref != '' && inputs.nightly == true }}
-      - name: Commit to the `nightly` branch
+      - name: Commit to the `latest` branch
         run: |
-          git switch nightly || git checkout -b nightly
+          git switch latest || git checkout -b latest
           git add lingua-franca
           git status --porcelain | grep . && git commit -m 'Update lingua-franca submodule'
           git push
