--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,11 @@ jobs:
         if: ${{ inputs.lingua-franca-ref != '' && inputs.nightly == true }}
       - name: Commit to the `latest` branch
         run: |
-          git fetch --all
           git add org.lflang/lingua-franca
           git status --porcelain | grep . && git commit -m 'Update lingua-franca submodule'
-          git push -f origin main:latest
+          git switch latest || git checkout -b latest
+          git reset --hard HEAD@{1}
+          git push -f
         shell: bash
         if: ${{ inputs.nightly == true }}
       - name: Build and package epoch
