Added javax.annotation for JUnit4.

--- a/org.lflang.ui.tests/pom.xml
+++ b/org.lflang.ui.tests/pom.xml
@@ -12,7 +12,27 @@
     
   <artifactId>org.lflang.ui.tests</artifactId>
   <packaging>eclipse-test-plugin</packaging>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <version>${tychoVersion}</version>
+        <configuration>
+          <dependency-resolution>
+            <extraRequirements>
+              <requirement>
+                <!-- Include javax.annotation which is needed by JUnit4 but not included by newer JDKs anymore. -->
+                 <type>eclipse-plugin</type>
+                 <id>javax.annotation</id>
+                 <versionRange>0.0.0</versionRange>
+               </requirement>
+            </extraRequirements>
+          </dependency-resolution>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <name>Lingua Franca UI Tests</name>
   
 </project>
