--- a/.github/workflows/eclipse-tests.yml
+++ b/.github/workflows/eclipse-tests.yml
@@ -15,13 +15,12 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
-      - name: Set up Java 17 and check Mavan/Java configuration
-        run: |
-          echo "$JAVA_HOME_17_X64/bin" >> $GITHUB_PATH
-          echo "JAVA_HOME=$JAVA_HOME_17_X64" >> $GITHUB_ENV
-          echo $(which java)
-          echo $JAVA_HOME
-          mvn -version
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Check Maven/Java configuration
+        run: mvn -version
         shell: bash
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
