--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -53,11 +53,11 @@
                     <cleanupDaemonThreads>false</cleanupDaemonThreads> <!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
                 </configuration>
                 <dependencies>
-                    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+                    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
                     <dependency>
-                        <groupId>commons-cli</groupId>
-                        <artifactId>commons-cli</artifactId>
-                        <version>${commonsCliVersion}</version>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-text</artifactId>
+                        <version>${commonsTextVersion}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.emf</groupId>
